adding input range for attributes, html and css formatting for skeletal structure

--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
 <body>
     <main>
-        <section class="mainattributes">
+        <container class="characterdetails">
+            <h1>Character Details</h1>
+
+        </container>
+        <container class="mainattributes">
 
             <card class="attribute">
-                <p>STR</p>    
+                <label for="Quantity">STR:</label>
+                <input type="number" id="Quantity" name="Quantity" min="1" max="20">  
             </card>
 
             <card class="attribute">
@@ -44,7 +49,7 @@
                 
             </card>
             
-        </section>
+        </container>
 
     </main>
 
